# bwi_ros2

./: .gitmodules  CMakeLists.txt  README.md  package.xml  recorded_poses.csv  recorded_transforms.csv
src/bwi_demo/: package.xml  setup.cfg  setup.py
src/bwi_demo/bwi_demo/: arm_test.py  demo.py  ros_interface.py
src/bwi_demo/data/: landmarks.yaml
src/bwi_launch/: CMakeLists.txt
src/bwi_launch/launch/: segbot_v2.launch.py  segbot_v5.launch.py  segbot_v5_arm.launch.py
src/bwi_tasks/: package.xml  setup.cfg  setup.py
src/bwi_tasks/bwi_tasks/: door_to_door_nav.py
src/bwi_tasks/scripts/: visit_door_list_phhp_2.py
src/ivcon/: CMakeLists.txt  package.xml
src/libsegwayrmp/: CMakeLists.txt  Makefile  package.xml  segway.sublime-project
src/libsegwayrmp/cmake/: FindSerial.cmake  libsegwayrmp.pc.in  libsegwayrmpConfig.cmake.in  libsegwayrmp_examples.cmake  libsegwayrmp_ftd2xx.cmake  libsegwayrmp_gui.cmake  libsegwayrmp_serial.cmake  libsegwayrmp_settings.cmake  libsegwayrmp_targets.cmake  libsegwayrmp_tests.cmake
src/libsegwayrmp/examples/: segwayrmp_example.cc
src/libsegwayrmp/include/libsegwayrmp/gui/: segwayrmp_gui.h
src/libsegwayrmp/include/libsegwayrmp/impl/: rmp_ftd2xx.h  rmp_io.h
src/libsegwayrmp/src/: segwayrmp.cc
src/libsegwayrmp/src/impl/: rmp_ftd2xx.cc  rmp_io.cc  rmp_serial.cc
src/libsegwayrmp/tests/: segwayrmp_tests.cc
src/lidar/ros2_laser_scan_merger/: CMakeLists.txt
src/lidar/ros2_laser_scan_merger/src/: main.cpp
src/lidar/urg_node2/config/: params_serial.yaml
src/nav2_bringup/maps/2/occ/: ahg_full_new.pgm
src/nav2_bringup/params/: nav2_params.yaml
src/nav2_bringup/params/v2/: nav2_params.yaml
src/nav2_bringup/params/v5/: nav2_params.yaml
src/pr2_description/: CMakeLists.txt  package.xml
src/segbot_description/: package.xml
src/segbot_description/gazebo/: segbot.gazebo.xacro
src/segbot_description/robots/: segbot_v4.urdf.xacro
src/segbot_description/urdf/: segbot_base.urdf.xacro  segbot_wheel.urdf.xacro  test_caster.urdf.xacro
src/segbot_description/urdf/mounts/: hokuyo_mount.urdf.xacro
src/segbot_description/urdf/sensors/: hokuyo_laser.gazebo.xacro  hokuyo_laser.urdf.xacro
src/segbot_description/urdf/v2/: common.urdf.xacro
src/segway/: .gitignore  README.md  package.xml  setup.cfg  setup.py
src/segway/launch/: segway_ros.launch.py
src/segway/segway/: faultlog_parser.py  io_eth.py  io_usb.py  segway_controller.py  segway_data_classes.py  segway_hardware_interface.py  system_defines.py  utils.py
src/v5_arm/apriltag_ros/apriltag_ros/cfg/: tags_25h9_all.yaml
src/v5_arm/apriltag_ros/apriltag_ros/launch/: tag_kinect.launch.py
src/v5_arm/arm_launch/: CMakeLists.txt  package.xml
src/v5_arm/arm_launch/config/: ur_arm_calibration.yaml
src/v5_arm/arm_launch/launch/: arm_drivers.launch.py  v5_arm.launch.py
src/v5_arm/moveit_task_constructor/capabilities/src/: execute_task_solution_capability.cpp
src/v5_arm/moveit_task_constructor/core/include/moveit/task_constructor/: stages.h
src/v5_arm/moveit_task_constructor/core/include/moveit/task_constructor/stages/: generate_box_grasp.h  generate_geometric_grasp.h  generate_sphere_grasp.h  generate_surface_place.h
src/v5_arm/moveit_task_constructor/core/src/stages/: CMakeLists.txt  connect.cpp  custom_stage_instructions.txt  generate_box_grasp.cpp  generate_geometric_grasp.cpp  generate_sphere_grasp.cpp  generate_surface_place.cpp
src/v5_arm/pick_and_place/: CMakeLists.txt  package.xml
src/v5_arm/pick_and_place/data/: objects.yaml
src/v5_arm/pick_and_place/launch/: pick_place.launch.py
src/v5_arm/pick_and_place/pick_and_place/: object_detector.py  pick_place_node.py
src/v5_arm/pick_and_place/src/: object_approximator_node.cpp  pick_place_exec_node.cpp  scene_cloud_publisher.cpp  update_tracked_objects_node.cpp
src/v5_arm/pick_place_msgs/: CMakeLists.txt  package.xml
src/v5_arm/pick_place_msgs/srv/: AddSceneObject.srv  EnableSceneCloud.srv  ObjectManipulation.srv
src/v5_arm/robotiq_description/urdf/: robotiq_arg2f.xacro  robotiq_arg2f_140_model.xacro  robotiq_arg2f_140_model_macro.xacro
src/v5_arm/robotiq_gripper_driver/: package.xml  setup.cfg  setup.py
src/v5_arm/robotiq_gripper_driver/robotiq_gripper_driver/: gripper_ros_controller.py
src/v5_arm/ur_description/urdf/: ur.urdf.xacro
src/v5_arm/ur_robot_driver/launch/: ur_control.launch.py
src/v5_arm/v5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/v5_arm/v5_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  sensors_kinect_depthmap.yaml  sensors_kinect_pointcloud.yaml  ur5_with_gripper.ros2_control.xacro  ur5_with_gripper.srdf  ur5_with_gripper.urdf.xacro  v5_with_arm.srdf
src/v5_arm/v5_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/v5_description/: CMakeLists.txt  package.xml
src/v5_description/config/ur5/: joint_limits.yaml  physical_parameters.yaml  visual_parameters.yaml
src/v5_description/launch/: load_ur.launch  load_ur5.launch  view_ur5.launch  view_v5.launch
src/v5_description/meshes/: BWIv5.stl
src/v5_description/meshes/ur5/collision/: v5.stl
src/v5_description/meshes/ur5/visual/: ur5_origin.dae
src/v5_description/tests/: roslaunch_test_ur5.xml
src/v5_description/urdf/: ur5_with_gripper.urdf.xacro  ur5_with_gripper_macro.xacro  v5_robot.urdf.xacro  v5_robot_macro.xacro  v5_with_arm.urdf.xacro
src/v5_description/urdf/sensors/: azure_kinect_macro.xacro
