<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>bwi-ros2</name>
  <version>1.0.0</version>
  <description>A package to aggregate all packages in my_project.</description>
  <maintainer email="livingwithrobotslab@gmail.com">nikunj</maintainer>
  <license>Apache License 2.0</license>
  <!-- packages in my_project -->
  <exec_depend>bwi_demo</exec_depend>
  <exec_depend>bwi_launch</exec_depend>
  <exec_depend>convex_decomposition</exec_depend>
  <exec_depend>pose_recorder</exec_depend>
  <exec_depend>visit_door_list</exec_depend>
  <exec_depend>ivcon</exec_depend>
  <exec_depend>libsegwayrmp</exec_depend>
  <exec_depend>lidar</exec_depend>
  <exec_depend>map_augmentation</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>pr2_description</exec_depend>
  <exec_depend>segbot_description</exec_depend>
  <exec_depend>segway</exec_depend>
  <exec_depend>segway_description</exec_depend>
  <exec_depend>segway_msgs</exec_depend>
  <exec_depend>segway_rmp_ros2</exec_depend>
  <exec_depend>v5_arm</exec_depend>
  <exec_depend>v5_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>