<?xml version="1.0"?>
<package format="3">
  <name>pr2_description</name>
  <version>1.13.1</version>
  <description>
    This package contains the description (mechanical, kinematic, visual, etc.) of the PR2 robot.
    The files in this package are parsed and used by a variety of other components.
    Most users will not interact directly with this package.
  </description>

  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_description</url>
  <url type="bugtracker">https://github.com/PR2/pr2_common/issues</url>

  <author>John Hsu</author>
  <author>Eric Berger</author>
  <author>Austin Hendrix</author>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <build_depend>convex_decomposition</build_depend> -->
  <!-- <build_depend>ivcon</build_depend> -->
  <build_depend>xacro</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>xacro</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
    <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

