<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>segbot_description</name>
  <version>0.3.5</version>
  <description>
    Contains URDF descriptions of all robot components and sensors for the segbot,
    as well as all the different sensor configurations for a segbot.
  </description>

  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/segbot_description</url>
  <url type="repository">https://github.com/utexas-bwi/segbot.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot/issues</url>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for running -->
  <!-- <depend>pr2_description</depend> -->
  <!-- segway_description commented out until segway stacks are released publicly -->
  <!-- <depend>segway_description</depend> -->
  <depend>velodyne_description</depend>
  <depend>velodyne_gazebo_plugins</depend>
  <depend>xacro</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
